# roll

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/actions/nix/: action.yml
.github/workflows/: ci.yml
benches/: combinatorics.rs
src/: cli.rs  combinatorics.rs  expression.rs  ibig_serializer.rs  iter_func.rs  lib.rs  main.rs  pmf.rs
src/cli/: mod.rs  roll.rs
src/command/: mod.rs  roll.rs
src/expression/: interpreter.rs  mod.rs  operators.rs  parse.rs  parser.rs  pmf.rs  precedence.rs  test.rs
tests/: cli.rs
